# asteroids

./: .gitignore  CMakeLists.txt  README.md  bounding_box_component.cpp  component.cpp  component.hpp  engine.cc  engine.h  engine.hpp  entity.h  entity.hpp  entity_manager.cc  entity_manager.cpp  entity_manager.h  entity_manager.hpp  game.cc  game.cpp  game_types.h  makefile  message.hpp  physics.h  physics.hpp  renderable.hpp  standard_defs.mk  system.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  vec2d.h  vec2d.hpp
cmake/: FindSDL2.cmake
common/: game_constants.h  game_types.h  rotation2d.h  vec2d.h
components/: CMakeLists.txt  bounding_box_component.cc  bounding_box_component.h  bounding_box_component.hpp  component.cc  component.cpp  component.h  component.hpp  interpolating_component.h  logical_position_component.h  physics_component.h  rendering_component.hpp  screen_position_component.cc  screen_position_component.cpp  screen_position_component.h  screen_position_component.hpp  sprite_component.cc  sprite_component.h
engine/: CMakeLists.txt  engine.cc  engine.h
entity/: CMakeLists.txt  entity.h  entity_manager.cc  entity_manager.h
graphics/: CMakeLists.txt  renderable.h  texture.cc  texture.h  texture_manager.cc  texture_manager.h
input/: CMakeLists.txt  action.h  action.hpp  context.cc  context.h  context.hpp  input_system.cpp  input_system.hpp  keyboard.cc  keyboard.cpp  keyboard.h  keyboard.hpp  keyboard_interface.h  sdl_keyboard.cc  sdl_keyboard.h
messages/: CMakeLists.txt  action.h  message.h  message.hpp  state.h
systems/: CMakeLists.txt  input_system.cc  input_system.h  interpolation_system.cc  interpolation_system.h  movement_system.cc  movement_system.h  physics_system.cc  physics_system.h  rendering_system.cc  rendering_system.h  system.h  system.hpp  (+2 more)
